<resources>
    <string name="app_name">mPharma</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have An Account? </string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User?</string>
    <string name="don_t_have_an_account">Don\'t Have An Account? </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registered_email">Registered Email</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="current_amount">&#x20B9;</string>

    <string name="total_price">Total Price :&#x20B9; 0</string>

</resources>