<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/logo_text" />


        <EditText
            android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit"
            android:drawableStart="@drawable/ic_baseline_email"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp" />


        <EditText
            android:id="@+id/sign_in_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit"
            android:drawableStart="@drawable/ic_baseline_key"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp" />


        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/forget_password"
            android:textColor="#2CA7E0"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/sign_in_progress"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            />


        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/button"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/sign_in"
            android:textColor="#50ffffff"
            android:enabled="false"
            android:textSize="30sp"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text= "@string/don_t_have_an_account"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_dont_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:layout_marginLeft="5dp"
                android:textColor="#2CA7E0"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>